# kafkacpp

./: .clangd  CMakeLists.txt  README.md  api-keys.yaml  vcpkg.json
.cache/clangd/index/: api_keys.cpp.EC2FF917A70E8E95.idx  api_keys.hpp.F512D0C947BC3C22.idx  buffer.cpp.A2B19FED97EDB866.idx  buffer.hpp.595D49085AEC9ACC.idx  main.cpp.7484E5994DFD860B.idx  primitives.hpp.B0E9A843FBF7B15D.idx  protocol.hpp.4B42B914E14213A9.idx  utils.cpp.3BE94D2E91E087D8.idx
src/: api_keys.cpp  buffer.cpp  main.cpp  utils.cpp
src/include/: api_keys.hpp  buffer.hpp  primitives.hpp  protocol.hpp  utils.hpp
